# firetest

./: .gitignore  Makefile  README.md
firetest/: Cargo.toml
firetest/bins/: busybox.zst  strace.zst
firetest/src/: main.rs  utils.rs
init/: Cargo.toml
init/.cargo/: config.toml
init/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
