[package]
name = "firetest"
version = "0.1.0"
edition = "2021"

[dependencies]
cpio = "0.4.0"
firecracker-spawn = { version = "0.1.0", path = "../../firecracker-spawn" }
memfd = "0.6.4"
shared = { version = "0.1.0", path = "../shared" }
tempfile = "3.13.0"
zstd = "0.13.2"

[patch.crates-io]
kvm-bindings = { git = "https://github.com/firecracker-microvm/kvm-bindings", tag = "v0.7.0-2", features = ["fam-wrappers"] }
